<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_white_horizontal_rect">

    <ImageView
        android:id="@+id/illustration_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/location_permission_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="Use your location"
        android:textAllCaps="true"
        android:textColor="@color/title_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/illustration_iv"
        app:layout_constraintStart_toStartOf="@+id/illustration_iv"
        app:layout_constraintTop_toBottomOf="@+id/illustration_iv" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/permission_text"
        android:textColor="@color/subtitle_color"
        app:layout_constraintEnd_toEndOf="@+id/illustration_iv"
        app:layout_constraintStart_toStartOf="@+id/illustration_iv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <Button
        android:id="@+id/allow_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/start_button_bg"
        android:fontFamily="@font/inter_regular"
        android:text="@string/allow"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/description_tv"
        app:layout_constraintStart_toStartOf="@+id/description_tv"
        app:layout_constraintTop_toBottomOf="@+id/description_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>