<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uz.ravshanbaxranov.presentation.ui.MapsFragment">

    <View
        android:id="@+id/top_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/details_cl" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loading_pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_600"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/gps_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/gps_status_low"
        app:layout_constraintBottom_toBottomOf="@+id/title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_tv" />


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_tv" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:gravity="center"
        android:text="@string/current_jogging"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/localty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />


    <View
        android:id="@+id/guideLine"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/details_cl" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blur_background_svg"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:id="@+id/map_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:foreground="@drawable/circle_ripple"
            android:src="@raw/standart"
            app:layout_constraintBottom_toBottomOf="@+id/time_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/time_tv"
            app:layout_constraintTop_toTopOf="@+id/time_tv" />

        <Chronometer
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/krona_one_regular"
            android:text="00:00:00"
            android:textColor="@color/title_color"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="Time"
            android:textColor="@color/dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_tv" />

        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one_regular"
            android:text="0.0"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/pace_tv"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pace_tv" />

        <TextView
            android:id="@+id/tv_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="@string/distance_km"
            android:textColor="@color/subtitle_color"
            app:layout_constraintEnd_toEndOf="@+id/distance_tv"
            app:layout_constraintStart_toStartOf="@+id/distance_tv"
            app:layout_constraintTop_toBottomOf="@+id/distance_tv" />

        <TextView
            android:id="@+id/pace_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/krona_one_regular"
            android:text="@string/_0_0"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="@string/avg_pace_km_h"
            android:textColor="@color/subtitle_color"
            app:layout_constraintEnd_toEndOf="@+id/pace_tv"

            app:layout_constraintStart_toStartOf="@+id/pace_tv"
            app:layout_constraintTop_toBottomOf="@+id/pace_tv" />

        <TextView
            android:id="@+id/calorie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one_regular"
            android:text="@string/_0"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/pace_tv"
            app:layout_constraintTop_toTopOf="@+id/pace_tv" />

        <TextView
            android:id="@+id/tv_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="@string/calories_kcal"
            android:textColor="@color/subtitle_color"
            app:layout_constraintEnd_toEndOf="@+id/calorie_tv"
            app:layout_constraintStart_toStartOf="@+id/calorie_tv"
            app:layout_constraintTop_toBottomOf="@+id/calorie_tv" />


        <Button
            android:id="@+id/start_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/start_button_bg"
            android:fontFamily="@font/inter_semi_bold"
            android:padding="12dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pace" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/reset_button_bg"
            android:enabled="false"
            android:fontFamily="@font/inter_semi_bold"
            android:padding="12dp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pace" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/stop_button_bg"
            android:enabled="false"
            android:fontFamily="@font/inter_semi_bold"
            android:padding="12dp"
            android:text="@string/stop"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pace" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/timer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/red"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="3" />


</androidx.constraintlayout.widget.ConstraintLayout>