<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grid_lines"
    tools:context="uz.ravshanbaxranov.presentation.ui.RunDetailFragment">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/map_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:transitionName="shared_element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_iv">

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/distance"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_distance"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10.5 km" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/duration"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

        <TextView
            android:id="@+id/duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha="0"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_duration"
            app:layout_constraintStart_toEndOf="@+id/tv_duration"
            app:layout_constraintTop_toTopOf="@+id/tv_duration"
            tools:text="1h 34min" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/time"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha="0"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time"
            app:layout_constraintStart_toEndOf="@+id/tv_time"
            app:layout_constraintTop_toTopOf="@+id/tv_time"
            tools:text="14:32 09-mart 2023" />

        <TextView
            android:id="@+id/tv_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/average_pace"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />

        <TextView
            android:id="@+id/pace_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha="0"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pace"
            app:layout_constraintStart_toEndOf="@+id/tv_pace"
            app:layout_constraintTop_toTopOf="@+id/tv_pace"
            tools:text="5.3 km/h" />

        <TextView
            android:id="@+id/tv_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/calorie"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pace" />

        <TextView
            android:id="@+id/calorie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha="0"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_calorie"
            app:layout_constraintStart_toEndOf="@+id/tv_calorie"
            app:layout_constraintTop_toTopOf="@+id/tv_calorie"
            tools:text="5.3 km/h" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_fba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/purple"
        android:src="@drawable/baseline_delete_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>